objects/TSS_StickIt_MR1__stickIt_defaults__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>TSS_StickIt_MR1__Auto_Attach__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, save label preview automatically when a label is printed.</description>
        <inlineHelpText>If checked, save label preview automatically when a label is printed.</inlineHelpText>
        <label>Auto Attach</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TSS_StickIt_MR1__Auto_Log__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, attach activity record automatically when a label is printed.</description>
        <inlineHelpText>If checked, attach activity record automatically when a label is printed.</inlineHelpText>
        <label>Auto Log</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TSS_StickIt_MR1__Field_API_Name__c</fullName>
        <description>API Field Name associated with the stickIt Defaults custom setting record.</description>
        <inlineHelpText>Enter the API Name of the Field associated with this stickIt Defaults custom setting.</inlineHelpText>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TSS_StickIt_MR1__Level_ID__c</fullName>
        <description>ID of Profile or User this default setting is associated with.</description>
        <label>Level ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TSS_StickIt_MR1__Level__c</fullName>
        <description>Level this setting applies to (Organization, Profile, or User). If profile or user, this field should contain the profile/user Id.</description>
        <label>Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TSS_StickIt_MR1__Log_Activity_Subject__c</fullName>
        <label>Log Activity Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TSS_StickIt_MR1__Log_Activity_Type__c</fullName>
        <label>Log Activity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TSS_StickIt_MR1__Log_Preview_Mode__c</fullName>
        <label>Log Preview Mode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TSS_StickIt_MR1__Object__c</fullName>
        <description>API Object Name associated with the stickIt Defaults custom setting record.</description>
        <inlineHelpText>Enter the API Name of the Object associated with this stickIt Defaults custom setting.</inlineHelpText>
        <label>Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TSS_StickIt_MR1__Print_Quantities__c</fullName>
        <label>Print Quantities</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TSS_StickIt_MR1__Print_Speed__c</fullName>
        <label>Print Speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TSS_StickIt_MR1__Printer__c</fullName>
        <label>Printer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TSS_StickIt_MR1__Roll_Preferences__c</fullName>
        <label>Roll Preferences</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TSS_StickIt_MR1__Template__c</fullName>
        <description>18 character ID of the Document record containing the label template associated with the stickIt Defaults custom setting record.</description>
        <inlineHelpText>Enter the 18 character ID of the Document record containing the label template to be associated with this stickIt Defaults custom setting.</inlineHelpText>
        <label>Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>stickIt Defaults</label>
</CustomObject>